# interview

./: .gitignore  README.md
crawling/async_selenium/: async_selenium.py
crawling/async_selenium/selenium_async/: _selenium.py  core.py  pool.py
crawling/fetch/: fetch.py
crawling/gnavi/: collect_item.sh  collect_paging_url.py  collect_url.py  make_endpoint.py
crawling/gnavi/gnavi_project/: scrapy.cfg
crawling/gnavi/gnavi_project/gnavi_project/: items.py  middlewares.py  pipelines.py  settings.py
crawling/gnavi/gnavi_project/gnavi_project/spiders/: gnavi.py
crawling/gnavi/my_modules/: count_items.py  database.py  make_bs.py  models.py  set_log.py
crawling/saison/: collect_url.py
crawling/tabelog/: collect_item.py  memo.text
crawling/tabelog/my_modules/: .env  database.py  models.py
qa/: chunk_file.py  inference.py  qa_train.py
qa/qa_module/: pre_process.py  qa_toknizer.py  set_log.py
qa/train/: dev.json  test.json
wasm/rust/: Cargo.toml
wasm/rust/pkg/: package.json  parser_bg.js  parser_bg.wasm.d.ts
wasm/rust/src/: lib.rs
wasm/typescript/: package.json  type.ts  wasm.ts  wasm_memory.ts
wasm/typescript/pkg/: package.json  parser.d.ts  parser.js
